--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,131 @@
-blinker==1.9.0
+absl-py==2.1.0
+appnope==0.1.4
+asttokens==2.4.1
+astunparse==1.6.3
+attrs==25.3.0
+autopep8==2.3.1
+backcall==0.2.0
+beautifulsoup4==4.13.3
+bleach==6.2.0
 branca==0.8.1
-certifi==2025.1.31
-charset-normalizer==3.4.1
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.8
 cloudpickle==3.1.1
-contourpy==1.3.1
+comm==0.2.2
+contourpy==1.3.0
 cycler==0.12.1
 dask==2025.3.0
-Flask==3.1.0
+debugpy==1.8.6
+decorator==5.1.1
+defusedxml==0.7.1
+docopt==0.6.2
+et_xmlfile==2.0.0
+executing==2.1.0
+fastjsonschema==2.21.1
+flatbuffers==24.3.25
 folium==0.19.5
-fonttools==4.56.0
-fsspec==2025.3.0
+fonttools==4.53.1
+fsspec==2025.3.2
+gast==0.6.0
 geographiclib==2.0
 geopandas==1.0.1
 geopy==2.4.1
-idna==3.10
-iniconfig==2.1.0
-itsdangerous==2.2.0
+google-pasta==0.2.0
+grpcio==1.66.1
+h5py==3.11.0
+idna==3.8
+iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.12.3
+jedi==0.19.1
 Jinja2==3.1.6
 joblib==1.4.2
-kiwisolver==1.4.8
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+keras==3.5.0
+kiwisolver==1.4.7
+libclang==18.1.1
 locket==1.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-numpy==2.2.4
-packaging==24.2
-pandas==2.2.3
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.3
+ml-dtypes==0.4.0
+namex==0.0.8
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+numpy==1.26.4
+openpyxl==3.1.5
+opt-einsum==3.3.0
+optree==0.12.1
+packaging==24.1
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
 partd==1.4.2
-pillow==11.1.0
+patsy==1.0.1
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.4.0
+pipreqs==0.5.0
+platformdirs==4.3.6
 pluggy==1.5.0
 polars==1.26.0
+prompt_toolkit==3.0.48
+protobuf==4.25.4
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==19.0.1
+pycodestyle==2.12.0
+Pygments==2.18.0
 pyogrio==0.10.0
-pyparsing==3.2.3
+pyparsing==3.1.4
 pyproj==3.7.1
 pytest==8.3.5
 python-dateutil==2.9.0.post0
-pytz==2025.2
+pytz==2024.1
 PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.36.2
 requests==2.32.3
-scikit-learn==1.6.1
-scipy==1.15.2
+rich==13.8.0
+rpds-py==0.24.0
+scikit-learn==1.5.2
+scipy==1.14.1
 seaborn==0.13.2
-shapely==2.0.7
-six==1.17.0
-threadpoolctl==3.6.0
+setuptools==75.2.0
+shapely==2.1.0
+six==1.16.0
+soupsieve==2.6
+stack-data==0.6.3
+statsmodels==0.14.4
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tinycss2==1.4.0
 toolz==1.0.0
-tzdata==2025.2
-urllib3==2.3.0
-Werkzeug==3.1.3
+tornado==6.4.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.0.4
+wheel==0.44.0
+wrapt==1.16.0
 xyzservices==2025.1.0
+yarg==0.1.9
